--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,42 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/dedication.xhtml">Dedication</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">Ukridge</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Ukridge’s Dog College</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Ukridge’s Accident Syndicate</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Début of Battling Billson</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: First Aid for Dora</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Return of Battling Billson</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Ukridge Sees Her Through</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: No Wedding Bells for Him</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Long Arm of Looney Coote</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Exit of Battling Billson</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Ukridge Rounds a Nasty Corner</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +69,13 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Halftitlepage</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Ukridge Stories</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
