reorganized from chapters to stories

--- a/src/epub/text/no-wedding-bells-for-him.xhtml
+++ b/src/epub/text/no-wedding-bells-for-him.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 7: No Wedding Bells for Him</title>
+		<title>No Wedding Bells for Him</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-7" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">VII</span>
-				<span epub:type="subtitle">No Wedding Bells for Him</span>
-			</h2>
+		<section id="no-wedding-bells-for-him" epub:type="volume se:short-story">
+			<h2 epub:type="title">No Wedding Bells for Him</h2>
 			<p>To Ukridge, as might be expected from one of his sunny optimism, the whole affair has long since come to present itself in the light of yet another proof of the way in which all things in this world of ours work together for good. In it, from start to finish, he sees the finger of Providence; and, when marshalling evidence to support his theory that a means of escape from the most formidable perils will always be vouchsafed to the righteous and deserving, this is the episode which he advances as Exhibit A.</p>
 			<p>The thing may be said to have had its beginning in the Haymarket one afternoon towards the middle of the summer. We had been lunching at my expense at the Pall Mall Restaurant, and as we came out a large and shiny car drew up beside the kerb, and the chauffeur, alighting, opened the bonnet and began to fiddle about in its interior with a pair of pliers. Had I been alone, a casual glance in passing would have contented me, but for Ukridge the spectacle of somebody else working always had an irresistible fascination, and, gripping my arm, he steered me up to assist him in giving the toiler moral support. About two minutes after he had started to breathe earnestly on the man’s neck, the latter, seeming to become aware that what was tickling his back hair was not some wandering June zephyr, looked up with a certain petulance.</p>
 			<p>“ ’Ere!” he said, protestingly. Then his annoyance gave place to something which⁠—for a chauffeur⁠—approached cordiality. “ ’Ullo!” he observed.</p>
