--- a/src/epub/text/the-exit-of-battling-billson.xhtml
+++ b/src/epub/text/the-exit-of-battling-billson.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 9: The Exit of Battling Billson</title>
+		<title>The Exit of Battling Billson</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-9" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">IX</span>
-				<span epub:type="subtitle">The Exit of Battling Billson</span>
-			</h2>
+		<section id="the-exit-of-battling-billson" epub:type="chapter">
+			<h2 epub:type="title">The Exit of Battling Billson</h2>
 			<p>The Theatre Royal, Llunindnno, is in the middle of the principal thoroughfare of that repellent town, and immediately opposite its grubby main entrance there is a lamppost. Under this lamppost, as I approached, a man was standing. He was a large man, and his air was that of one who has recently passed through some trying experience. There was dust on his person, and he had lost his hat. At the sound of my footsteps he turned, and the rays of the lamp revealed the familiar features of my old friend Stanley Featherstonehaugh Ukridge.</p>
 			<p>“Great Scot!” I ejaculated. “What are you doing here?”</p>
 			<p>There was no possibility of hallucination. It was the man himself in the flesh. And what Ukridge, a free agent, could be doing in Llunindnno was more than I could imagine. Situated, as its name implies, in Wales, it is a dark, dingy, dishevelled spot, inhabited by tough and sinister men with suspicious eyes and three-day beards; and to me, after a mere forty minutes’ sojourn in the place, it was incredible that anyone should be there except on compulsion.</p>
