--- a/src/epub/text/the-long-arm-of-looney-coote.xhtml
+++ b/src/epub/text/the-long-arm-of-looney-coote.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 8: The Long Arm of Looney Coote</title>
+		<title>The Long Arm of Looney Coote</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-8" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">VIII</span>
-				<span epub:type="subtitle">The Long Arm of Looney Coote</span>
-			</h2>
+		<section id="the-long-arm-of-looney-coote" epub:type="volume se:short-story">
+			<h2 epub:type="title">The Long Arm of Looney Coote</h2>
 			<p>Given private means sufficiently large to pad them against the moulding buffets of Life, it is extraordinary how little men change in after years from the boys they once were. There was a youth in my house at school named Coote. <abbr class="name">J. G.</abbr> Coote. And he was popularly known as Looney on account of the vain and foolish superstitions which seemed to rule his every action. Boys are hardheaded, practical persons, and they have small tolerance for the viewpoint of one who declines to join in a quiet smoke behind the gymnasium not through any moral scruples⁠—which, to do him justice, he would have scorned⁠—but purely on the ground that he had seen a magpie that morning. This was what <abbr class="name">J. G.</abbr> Coote did, and it was the first occasion on which I remember him being addressed as Looney.</p>
 			<p>But, once given, the nickname stuck; and this in spite of the fact⁠—seeing that we were caught halfway through the first cigarette and forcefully dealt with by a muscular headmaster⁠—that that magpie of his would appear to have known a thing or two. For five happy years, till we parted to go to our respective universities, I never called Coote anything but Looney; and it was as Looney that I greeted him when we happened upon each other one afternoon at Sandown, shortly after the conclusion of the three o’clock race.</p>
 			<p>“Did you do anything on that one?” I asked, after we had exchanged salutations.</p>
