--- a/src/epub/text/first-aid-for-dora.xhtml
+++ b/src/epub/text/first-aid-for-dora.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 4: First Aid for Dora</title>
+		<title>First Aid for Dora</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-4" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">IV</span>
-				<span epub:type="subtitle">First Aid for Dora</span>
-			</h2>
+		<section id="first-aid-for-dora" epub:type="volume se:short-story">
+			<h2 epub:type="title">First Aid for Dora</h2>
 			<p>Never in the course of a long and intimate acquaintance having been shown any evidence to the contrary, I had always looked on Stanley Featherstonehaugh Ukridge, my boyhood chum, as a man ruggedly indifferent to the appeal of the opposite sex. I had assumed that, like so many financial giants, he had no time for dalliance with women⁠—other and deeper matters, I supposed, keeping that great brain permanently occupied. It was a surprise, therefore, when, passing down Shaftesbury Avenue one Wednesday afternoon in June at the hour when matinée audiences were leaving the theatres, I came upon him assisting a girl in a white dress to mount an omnibus.</p>
 			<p>As far as this simple ceremony could be rendered impressive, Ukridge made it so. His manner was a blend of courtliness and devotion; and if his mackintosh had been a shade less yellow and his hat a trifle less disreputable, he would have looked just like Sir Walter Ralegh.</p>
 			<p>The bus moved on, Ukridge waved, and I proceeded to make enquiries. I felt that I was an interested party. There had been a distinctly “object-matrimony” look about the back of his neck, it seemed to me; and the prospect of having to support a <abbr>Mrs.</abbr> Ukridge and keep a flock of little Ukridges in socks and shirts perturbed me.</p>
