--- a/src/epub/text/the-return-of-battling-billson.xhtml
+++ b/src/epub/text/the-return-of-battling-billson.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 5: The Return of Battling Billson</title>
+		<title>The Return of Battling Billson</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-5" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">V</span>
-				<span epub:type="subtitle">The Return of Battling Billson</span>
-			</h2>
+		<section id="the-return-of-battling-billson" epub:type="volume se:short-story">
+			<h2 epub:type="title">The Return of Battling Billson</h2>
 			<p>It was a most embarrassing moment, one of those moments which plant lines on the face and turn the hair a distinguished grey at the temples. I looked at the barman. The barman looked at me. The assembled company looked at us both impartially.</p>
 			<p>“Ho!” said the barman.</p>
 			<p>I am very quick. I could see at once that he was not in sympathy with me. He was a large, profuse man, and his eye as it met mine conveyed the impression that he regarded me as a bad dream come true. His mobile lips curved slightly, showing a gold tooth; and the muscles of his brawny arms, which were strong as iron bands, twitched a little.</p>
