--- a/src/epub/text/ukridge-rounds-a-nasty-corner.xhtml
+++ b/src/epub/text/ukridge-rounds-a-nasty-corner.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 10: Ukridge Rounds a Nasty Corner</title>
+		<title>Ukridge Rounds a Nasty Corner</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-10" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">X</span>
-				<span epub:type="subtitle">Ukridge Rounds a Nasty Corner</span>
-			</h2>
+		<section id="ukridge-rounds-a-nasty-corner" epub:type="volume se:short-story">
+			<h2 epub:type="title">Ukridge Rounds a Nasty Corner</h2>
 			<p>The late Sir Rupert Lakenheath, <abbr class="initialism">K.C.M.G.</abbr>, <abbr class="initialism">C.B.</abbr>, <abbr class="initialism">M.V.O.</abbr>, was one of those men at whom their countries point with pride. Until his retirement on a pension in the year 1906, he had been Governor of various insanitary outposts of the British Empire situated around the equator, and as such had won respect and esteem from all. A kindly editor of my acquaintance secured for me the job of assisting the widow of this great administrator to prepare his memoirs for publication; and on a certain summer afternoon I had just finished arraying myself suitably for my first call on her at her residence in Thurloe Square, South Kensington, when there was a knock at the door, and Bowles, my landlord, entered, bearing gifts.</p>
 			<p>These consisted of a bottle with a staring label and a large cardboard hatbox. I gazed at them blankly, for they held no message for me.</p>
 			<p>Bowles, in his ambassadorial manner, condescended to explain.</p>
