--- a/src/epub/text/ukridges-accident-syndicate.xhtml
+++ b/src/epub/text/ukridges-accident-syndicate.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 2: Ukridge’s Accident Syndicate</title>
+		<title>Ukridge’s Accident Syndicate</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-2" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">II</span>
-				<span epub:type="subtitle">Ukridge’s Accident Syndicate</span>
-			</h2>
+		<section id="ukridges-accident-syndicate" epub:type="volume se:short-story">
+			<h2 epub:type="title">Ukridge’s Accident Syndicate</h2>
 			<p>“Half a minute, laddie,” said Ukridge. And, gripping my arm, he brought me to a halt on the outskirts of the little crowd which had collected about the church door.</p>
 			<p>It was a crowd such as may be seen any morning during the London mating-season outside any of the churches which nestle in the quiet squares between Hyde Park and the King’s Road, Chelsea.</p>
 			<p>It consisted of five women of cooklike aspect, four nursemaids, half a dozen men of the non-producing class who had torn themselves away for the moment from their normal task of propping up the wall of the Bunch of Grapes public house on the corner, a costermonger with a barrow of vegetables, divers small boys, eleven dogs, and two or three purposeful-looking young fellows with cameras slung over their shoulders. It was plain that a wedding was in progress⁠—and, arguing from the presence of the cameramen and the line of smart motorcars along the kerb, a fairly fashionable wedding. What was not plain⁠—to me⁠—was why Ukridge, sternest of bachelors, had desired to add himself to the spectators.</p>
