--- a/src/epub/text/ukridges-dog-college.xhtml
+++ b/src/epub/text/ukridges-dog-college.xhtml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Chapter 1: Ukridge’s Dog College</title>
+		<title>Ukridge’s Dog College</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-1" epub:type="chapter">
-			<h2 epub:type="title">
-				<span epub:type="z3998:roman">I</span>
-				<span epub:type="subtitle">Ukridge’s Dog College</span>
-			</h2>
+		<section id="ukridges-dog-college" epub:type="volume se:short-story">
+			<h2 epub:type="title">Ukridge’s Dog College</h2>
 			<p>“Laddie,” said Stanley Featherstonehaugh Ukridge, that much-enduring man, helping himself to my tobacco and slipping the pouch absently into his pocket, “listen to me, you son of Belial.”</p>
 			<p>“What?” I said, retrieving the pouch.</p>
 			<p>“Do you want to make an enormous fortune?”</p>
