--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,34 +20,34 @@
 					<a href="text/halftitle.xhtml">Ukridge</a>
 					<ol>
 						<li>
-							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Ukridge’s Dog College</a>
+							<a href="text/ukridges-dog-college.xhtml">Ukridge’s Dog College</a>
 						</li>
 						<li>
-							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Ukridge’s Accident Syndicate</a>
+							<a href="text/ukridges-accident-syndicate.xhtml">Ukridge’s Accident Syndicate</a>
 						</li>
 						<li>
-							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Début of Battling Billson</a>
+							<a href="text/the-debut-of-battling-billson.xhtml">The Début of Battling Billson</a>
 						</li>
 						<li>
-							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: First Aid for Dora</a>
+							<a href="text/first-aid-for-dora.xhtml">First Aid for Dora</a>
 						</li>
 						<li>
-							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Return of Battling Billson</a>
+							<a href="text/the-return-of-battling-billson.xhtml">The Return of Battling Billson</a>
 						</li>
 						<li>
-							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Ukridge Sees Her Through</a>
+							<a href="text/ukridge-sees-her-through.xhtml">Ukridge Sees Her Through</a>
 						</li>
 						<li>
-							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: No Wedding Bells for Him</a>
+							<a href="text/no-wedding-bells-for-him.xhtml">No Wedding Bells for Him</a>
 						</li>
 						<li>
-							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Long Arm of Looney Coote</a>
+							<a href="text/the-long-arm-of-looney-coote.xhtml">The Long Arm of Looney Coote</a>
 						</li>
 						<li>
-							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Exit of Battling Billson</a>
+							<a href="text/the-exit-of-battling-billson.xhtml">The Exit of Battling Billson</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Ukridge Rounds a Nasty Corner</a>
+							<a href="text/ukridge-rounds-a-nasty-corner.xhtml">Ukridge Rounds a Nasty Corner</a>
 						</li>
 					</ol>
 				</li>
@@ -72,10 +72,10 @@
 					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Halftitlepage</a>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Ukridge Stories</a>
+					<a href="text/ukridges-dog-college.xhtml" epub:type="bodymatter z3998:fiction">Ukridge Stories</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
