--- a/src/epub/text/halftitle.xhtml
+++ b/src/epub/text/halftitle.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="halftitlepage" epub:type="halftitlepage">
-			<h1 epub:type="fulltitle">Ukridge</h1>
+			<h1 epub:type="fulltitle">Ukridge Stories</h1>
 		</section>
 	</body>
 </html>
