--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/dedication.xhtml">Dedication</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">Ukridge</a>
+					<a href="text/halftitle.xhtml">Ukridge Stories</a>
 					<ol>
 						<li>
 							<a href="text/ukridges-dog-college.xhtml">Ukridge’s Dog College</a>
