--- a/src/epub/text/the-long-arm-of-looney-coote.xhtml
+++ b/src/epub/text/the-long-arm-of-looney-coote.xhtml
@@ -118,29 +118,24 @@
 			<p>Whether I was technically correct in describing as guiding the ship of state a man who would probably spend his entire Parliamentary career in total silence, voting meekly as the Whip directed, I had not stopped to enquire. All I knew was that it sounded well, and I wanted to hear it. In addition to which, there was the opportunity, never likely to occur again, of seeing Ukridge make an ass of himself before a large audience.</p>
 			<p>I went to Redbridge.</p>
 			<p>The first thing I saw on leaving the station was a very large poster exhibiting Boko Lawlor’s expressive features, bearing the legend:⁠—</p>
-			<blockquote>
-				<p>
-					<strong>Lawlor<br/>
-					for<br/>
-					Redbridge.</strong>
-				</p>
+			<blockquote class="poster">
+				<p>Lawlor<br/>
+				for<br/>
+				Redbridge.</p>
 			</blockquote>
 			<p>This was all right, but immediately beside it, evidently placed there by the hand of an enemy, was a still larger caricature of this poster which stressed my old friend’s prominent nose in a manner that seemed to me to go beyond the limits of a fair debate. To this was appended the words:⁠—</p>
-			<blockquote>
-				<p>
-					<strong>Do You<br/>
-					Want<br/>
-					<em>this</em><br/>
-					For a Member?</strong>
+			<blockquote class="poster">
+				<p>Do You<br/>
+				Want<br/>
+				<em>this</em><br/>
+				For a Member?
 				</p>
 			</blockquote>
 			<p>To which, if I had been a hesitating voter of the constituency, I would certainly have replied “No!” for there was something about that grossly elongated nose that convicted the man beyond hope of appeal of every undesirable quality a Member of Parliament can possess. You could see at a glance that here was one who, if elected, would do his underhand best to cut down the Navy, tax the poor man’s food, and strike a series of blows at the very root of the home. And, as if this were not enough, a few yards farther on was a placard covering almost the entire side of a house, which said in simple, straightforward black letters a foot high:⁠—</p>
-			<blockquote>
-				<p>
-					<strong>Down With<br/>
-					Boko,<br/>
-					The Human Gargoyle.</strong>
-				</p>
+			<blockquote class="poster">
+				<p>Down With<br/>
+				Boko,<br/>
+				The Human Gargoyle.</p>
 			</blockquote>
 			<p>How my poor old contemporary, after passing a week in the constant society of these slurs on his personal appearance, could endure to look himself in the face in his shaving-mirror of a morning was more than I could see. I commented on this to Ukridge, who had met me at the station in a luxurious car.</p>
 			<p>“Oh, that’s nothing,” said Ukridge, huskily. The first thing I had noticed about him was that his vocal cords had been putting in overtime since our last meeting. “Just the usual give-and-take of an election. When we get round this next corner you’ll see the poster we’ve got out to tickle up the other bloke. It’s a pippin.”</p>
