Update semantics on short story wrappers

--- a/src/epub/text/first-aid-for-dora.xhtml
+++ b/src/epub/text/first-aid-for-dora.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="first-aid-for-dora" epub:type="volume se:short-story">
+		<article id="first-aid-for-dora" epub:type="se:short-story">
 			<h2 epub:type="title">First Aid for Dora</h2>
 			<p>Never in the course of a long and intimate acquaintance having been shown any evidence to the contrary, I had always looked on Stanley Featherstonehaugh Ukridge, my boyhood chum, as a man ruggedly indifferent to the appeal of the opposite sex. I had assumed that, like so many financial giants, he had no time for dalliance with women⁠—other and deeper matters, I supposed, keeping that great brain permanently occupied. It was a surprise, therefore, when, passing down Shaftesbury Avenue one Wednesday afternoon in June at the hour when matinée audiences were leaving the theatres, I came upon him assisting a girl in a white dress to mount an omnibus.</p>
 			<p>As far as this simple ceremony could be rendered impressive, Ukridge made it so. His manner was a blend of courtliness and devotion; and if his mackintosh had been a shade less yellow and his hat a trifle less disreputable, he would have looked just like Sir Walter Ralegh.</p>
@@ -220,6 +220,6 @@
 			<p>He quaffed deeply of the bowl and breathed a contented sigh. There was a silence.</p>
 			<p>“When did you hear of this?” I asked at length.</p>
 			<p>“Yesterday afternoon,” said Ukridge. “I meant to pop round and tell you, but somehow it slipped my mind.”</p>
-		</section>
+		</article>
 	</body>
 </html>
