--- a/src/epub/text/the-debut-of-battling-billson.xhtml
+++ b/src/epub/text/the-debut-of-battling-billson.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-debut-of-battling-billson" epub:type="volume se:short-story">
+		<article id="the-debut-of-battling-billson" epub:type="se:short-story">
 			<h2 epub:type="title">The Début of Battling Billson</h2>
 			<p>It becomes increasingly difficult, I have found, as time goes by, to recall the exact circumstances in which one first became acquainted with this man or that; for as a general thing I lay no claim to the possession of one of those hair-trigger memories which come from subscribing to the correspondence courses advertised in the magazines. And yet I can state without doubt or hesitation that the individual afterwards known as Battling Billson entered my life at half-past four on the afternoon of Saturday, September the tenth, two days after my twenty-seventh birthday. For there was that about my first sight of him which has caused the event to remain photographically lined on the tablets of my mind when a yesterday has faded from its page. Not only was our meeting dramatic and even startling, but it had in it something of the quality of the last straw, the final sling or arrow of outrageous Fortune. It seemed to put the lid on the sadness of life.</p>
 			<p>Everything had been going steadily wrong with me for more than a week. I had been away, paying a duty visit to uncongenial relatives in the country, and it had rained and rained and rained. There had been family prayers before breakfast and bezique after dinner. On the journey back to London my carriage had been full of babies, the train had stopped everywhere, and I had had nothing to eat but a bag of buns. And when finally I let myself into my lodgings in Ebury Street and sought the soothing haven of my sitting room, the first thing I saw on opening the door was this enormous redheaded man lying on the sofa.</p>
@@ -265,6 +265,6 @@
 			<p>Across the street an arc-lamp shed its cold rays. And into its glare there strode a man draped in a yellow mackintosh. The light gleamed on his pince-nez and lent a gruesome pallor to his set face. It was Ukridge retreating from Moscow.</p>
 			<p>“Others,” I said, “are thinking the same.”</p>
 			<p>And I hurried across the road to administer what feeble consolation I might. There are moments when a fellow needs a friend.</p>
-		</section>
+		</article>
 	</body>
 </html>
