--- a/src/epub/text/the-exit-of-battling-billson.xhtml
+++ b/src/epub/text/the-exit-of-battling-billson.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-exit-of-battling-billson" epub:type="chapter">
+		<article id="the-exit-of-battling-billson" epub:type="se:short-story">
 			<h2 epub:type="title">The Exit of Battling Billson</h2>
 			<p>The Theatre Royal, Llunindnno, is in the middle of the principal thoroughfare of that repellent town, and immediately opposite its grubby main entrance there is a lamppost. Under this lamppost, as I approached, a man was standing. He was a large man, and his air was that of one who has recently passed through some trying experience. There was dust on his person, and he had lost his hat. At the sound of my footsteps he turned, and the rays of the lamp revealed the familiar features of my old friend Stanley Featherstonehaugh Ukridge.</p>
 			<p>“Great Scot!” I ejaculated. “What are you doing here?”</p>
@@ -237,6 +237,6 @@
 			<p>“I just pushed ’im in the face,” proceeded <abbr>Mr.</abbr> Billson, “and took the liddle bag away from ’im.”</p>
 			<p>He placed on the table a small weatherworn suitcase that jingled musically as he moved it; then, with the air of one who dismisses some triviality from his mind, moved to the door.</p>
 			<p>“ ’Scuse me, gents,” said Battling Billson, deprecatingly. “Can’t stop. I’ve got to go and spread the light.”</p>
-		</section>
+		</article>
 	</body>
 </html>
