--- a/src/epub/text/the-long-arm-of-looney-coote.xhtml
+++ b/src/epub/text/the-long-arm-of-looney-coote.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-long-arm-of-looney-coote" epub:type="volume se:short-story">
+		<article id="the-long-arm-of-looney-coote" epub:type="se:short-story">
 			<h2 epub:type="title">The Long Arm of Looney Coote</h2>
 			<p>Given private means sufficiently large to pad them against the moulding buffets of Life, it is extraordinary how little men change in after years from the boys they once were. There was a youth in my house at school named Coote. <abbr class="name">J. G.</abbr> Coote. And he was popularly known as Looney on account of the vain and foolish superstitions which seemed to rule his every action. Boys are hardheaded, practical persons, and they have small tolerance for the viewpoint of one who declines to join in a quiet smoke behind the gymnasium not through any moral scruples⁠—which, to do him justice, he would have scorned⁠—but purely on the ground that he had seen a magpie that morning. This was what <abbr class="name">J. G.</abbr> Coote did, and it was the first occasion on which I remember him being addressed as Looney.</p>
 			<p>But, once given, the nickname stuck; and this in spite of the fact⁠—seeing that we were caught halfway through the first cigarette and forcefully dealt with by a muscular headmaster⁠—that that magpie of his would appear to have known a thing or two. For five happy years, till we parted to go to our respective universities, I never called Coote anything but Looney; and it was as Looney that I greeted him when we happened upon each other one afternoon at Sandown, shortly after the conclusion of the three o’clock race.</p>
@@ -128,8 +128,7 @@
 				<p>Do You<br/>
 				Want<br/>
 				<em>this</em><br/>
-				For a Member?
-				</p>
+				For a Member?</p>
 			</blockquote>
 			<p>To which, if I had been a hesitating voter of the constituency, I would certainly have replied “No!” for there was something about that grossly elongated nose that convicted the man beyond hope of appeal of every undesirable quality a Member of Parliament can possess. You could see at a glance that here was one who, if elected, would do his underhand best to cut down the Navy, tax the poor man’s food, and strike a series of blows at the very root of the home. And, as if this were not enough, a few yards farther on was a placard covering almost the entire side of a house, which said in simple, straightforward black letters a foot high:⁠—</p>
 			<blockquote class="poster">
@@ -284,6 +283,6 @@
 			<p>“Don’t say another word, old man, not another word,” he pleaded. “It’s the sort of thing that might have happened to anyone. And, as a matter of fact, the whole affair has done me a bit of good. Dashed lucky it has turned out for me. You see, it came as a sort of omen. There was an absolute outsider running in the third race at Kempton Park the day after the car went called Stolen Goods, and somehow it seemed to me that the thing had been sent for a purpose. I crammed on thirty quid at twenty-five to one. The people round about laughed when they saw me back this poor, broken-down-looking moke, and, dash it, the animal simply romped home! I collected a parcel!”</p>
 			<p>We clamoured our congratulations on this happy ending. Ukridge was especially exuberant.</p>
 			<p>“Yes,” said Looney Coote, “I won seven hundred and fifty quid. Just like that! I put it on with that new fellow you were telling me about at the <abbr class="initialism">O.W.</abbr> dinner, old man⁠—that chap Isaac O’Brien. It sent him absolutely broke and he’s had to go out of business. He’s only paid me six hundred quid so far, but says he has some sort of a sleeping partner or something who may be able to raise the balance.”</p>
-		</section>
+		</article>
 	</body>
 </html>
