--- a/src/epub/text/the-return-of-battling-billson.xhtml
+++ b/src/epub/text/the-return-of-battling-billson.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-return-of-battling-billson" epub:type="volume se:short-story">
+		<article id="the-return-of-battling-billson" epub:type="se:short-story">
 			<h2 epub:type="title">The Return of Battling Billson</h2>
 			<p>It was a most embarrassing moment, one of those moments which plant lines on the face and turn the hair a distinguished grey at the temples. I looked at the barman. The barman looked at me. The assembled company looked at us both impartially.</p>
 			<p>“Ho!” said the barman.</p>
@@ -217,6 +217,6 @@
 			<p>“But he didn’t sell the fight.”</p>
 			<p>“I know that, dammit. That’s the whole trouble. And do you know why he didn’t? I’ll tell you. Just as he was all ready to let himself be knocked out in that fifth round, the other bloke happened to tread on his ingrowing toenail, and that made him so mad that he forgot about everything else and sailed in and hammered the stuffing out of him. I ask you, laddie! I appeal to you as a reasonable man. Have you ever in your life heard of such a footling, idiotic, woollen-headed proceeding? Throwing away a fortune, an absolute dashed fortune, purely to gratify a momentary whim! Hurling away wealth beyond the dreams of avarice simply because a bloke stamped on his ingrowing toenail. His ingrowing toenail!” Ukridge laughed raspingly. “What right has a boxer to <em>have</em> an ingrowing toenail? And if he has an ingrowing toenail, surely⁠—my gosh!⁠—he can stand a little trifling discomfort for half a minute. The fact of the matter is, old horse, boxers aren’t what they were. Degenerate, laddie, absolutely degenerate. No heart. No courage. No self-respect. No vision. The old bulldog breed has disappeared entirely.”</p>
 			<p>And with a moody nod Stanley Featherstonehaugh Ukridge passed out into the night.</p>
-		</section>
+		</article>
 	</body>
 </html>
