--- a/src/epub/text/ukridges-accident-syndicate.xhtml
+++ b/src/epub/text/ukridges-accident-syndicate.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="ukridges-accident-syndicate" epub:type="volume se:short-story">
+		<article id="ukridges-accident-syndicate" epub:type="se:short-story">
 			<h2 epub:type="title">Ukridge’s Accident Syndicate</h2>
 			<p>“Half a minute, laddie,” said Ukridge. And, gripping my arm, he brought me to a halt on the outskirts of the little crowd which had collected about the church door.</p>
 			<p>It was a crowd such as may be seen any morning during the London mating-season outside any of the churches which nestle in the quiet squares between Hyde Park and the King’s Road, Chelsea.</p>
@@ -207,6 +207,6 @@
 			<p>Ukridge grasped my arm. There was a look of deep content in his eyes.</p>
 			<p>“Shift-ho?” said Ukridge.</p>
 			<p>Arm-in-arm, we strolled off in the pleasant June sunshine.</p>
-		</section>
+		</article>
 	</body>
 </html>
