--- a/src/epub/text/ukridges-dog-college.xhtml
+++ b/src/epub/text/ukridges-dog-college.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="ukridges-dog-college" epub:type="volume se:short-story">
+		<article id="ukridges-dog-college" epub:type="se:short-story">
 			<h2 epub:type="title">Ukridge’s Dog College</h2>
 			<p>“Laddie,” said Stanley Featherstonehaugh Ukridge, that much-enduring man, helping himself to my tobacco and slipping the pouch absently into his pocket, “listen to me, you son of Belial.”</p>
 			<p>“What?” I said, retrieving the pouch.</p>
@@ -230,6 +230,6 @@
 			<p>“Yes, Aunt Julia.”</p>
 			<p>I sidled out into the road. Inside the cottage the yapping of the Pekingese had become quite hysterical. I found myself trotting, and then⁠—though it was a warm day⁠—running quite rapidly. I could have stayed if I had wanted to, but somehow I did not want to. Something seemed to tell me that on this holy domestic scene I should be an intruder.</p>
 			<p>What it was that gave me that impression I do not know⁠—probably vision or the big, broad, flexible outlook.</p>
-		</section>
+		</article>
 	</body>
 </html>
