--- a/src/epub/text/ukridge-rounds-a-nasty-corner.xhtml
+++ b/src/epub/text/ukridge-rounds-a-nasty-corner.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="ukridge-rounds-a-nasty-corner" epub:type="volume se:short-story">
+		<article id="ukridge-rounds-a-nasty-corner" epub:type="se:short-story">
 			<h2 epub:type="title">Ukridge Rounds a Nasty Corner</h2>
 			<p>The late Sir Rupert Lakenheath, <abbr class="initialism">K.C.M.G.</abbr>, <abbr class="initialism">C.B.</abbr>, <abbr class="initialism">M.V.O.</abbr>, was one of those men at whom their countries point with pride. Until his retirement on a pension in the year 1906, he had been Governor of various insanitary outposts of the British Empire situated around the equator, and as such had won respect and esteem from all. A kindly editor of my acquaintance secured for me the job of assisting the widow of this great administrator to prepare his memoirs for publication; and on a certain summer afternoon I had just finished arraying myself suitably for my first call on her at her residence in Thurloe Square, South Kensington, when there was a knock at the door, and Bowles, my landlord, entered, bearing gifts.</p>
 			<p>These consisted of a bottle with a staring label and a large cardboard hatbox. I gazed at them blankly, for they held no message for me.</p>
@@ -242,6 +242,6 @@
 			<p>“Getting on for five.”</p>
 			<p>Ukridge seemed to muse for a moment, and a happy smile irradiated his face.</p>
 			<p>“About now,” he said, complacently, “my aunt is out in the Channel somewhere. And I see by the morning paper that there is a nasty gale blowing up from the southeast!”</p>
-		</section>
+		</article>
 	</body>
 </html>
