Replace .signature class with z3998:signature epub:type

--- a/src/epub/text/first-aid-for-dora.xhtml
+++ b/src/epub/text/first-aid-for-dora.xhtml
@@ -118,7 +118,7 @@
 			<p>“What?”</p>
 			<p>I had picked up the last envelope. It was addressed in a strong female hand, strange to me. I now tore it open. It was even as Ukridge had said. Dated the previous day and headed “Heath House, Wimbledon Common,” the letter ran as follows:⁠—</p>
 			<blockquote epub:type="z3998:letter">
-				<p>“<b epub:type="z3998:salutation">Dear Sir</b>⁠—I shall be happy to see you if you will call at this address the day after tomorrow (Friday) at four-thirty.⁠—Yours faithfully, <span class="signature" epub:type="z3998:sender">Julia Ukridge</span>.”</p>
+				<p>“<b epub:type="z3998:salutation">Dear Sir</b>⁠—I shall be happy to see you if you will call at this address the day after tomorrow (Friday) at four-thirty.⁠—Yours faithfully, <span epub:type="z3998:signature z3998:sender">Julia Ukridge</span>.”</p>
 			</blockquote>
 			<p>I could make nothing of this. My morning mail, whether pleasant or the reverse, whether bringing a bill from a tradesman or a cheque from an editor, had had till now the uniform quality of being plain, straightforward, and easy to understand; but this communication baffled me. How Ukridge’s aunt had become aware of my existence, and why a call from me should ameliorate her lot, were problems beyond my unravelling, and I brooded over it as an Egyptologist might over some newly-discovered hieroglyphic.</p>
 			<p>“What does she say?” enquired Ukridge.</p>
