--- a/src/epub/text/the-debut-of-battling-billson.xhtml
+++ b/src/epub/text/the-debut-of-battling-billson.xhtml
@@ -203,7 +203,7 @@
 				<p>“Hoping this finds you in the pink as it leaves me at present,</p>
 				<footer>
 					<p epub:type="z3998:valediction">“Yours faithfully,</p>
-					<p class="signature" epub:type="z3998:sender">“Florence Burns.”</p>
+					<p epub:type="z3998:signature z3998:sender">“Florence Burns.”</p>
 				</footer>
 			</blockquote>
 			<p>“I told her to keep it snappy,” said Ukridge.</p>
