--- a/src/epub/text/the-long-arm-of-looney-coote.xhtml
+++ b/src/epub/text/the-long-arm-of-looney-coote.xhtml
@@ -99,9 +99,9 @@
 			<p>It had not been my intention originally to take any part in the by-election in the Redbridge division beyond writing three verses of a hymn in praise of Boko Lawlor and sending him a congratulatory wire if he won. But two things combined to make me change my mind. The first was the fact that it occurred to me⁠—always the keen young journalist⁠—that there might be a couple of guineas of <i epub:type="se:name.publication.magazine">Interesting Bits</i> money in it (“How a Modern Election is Fought: Humours of the Poll”); the second, that, ever since his departure Ukridge had been sending me a constant stream of telegrams so stimulating that eventually they lit the spark.</p>
 			<p>I append specimens:⁠—</p>
 			<blockquote>
-				<p>“Going strong. Made three speeches yesterday. Election song a sensation. Come on down.⁠—<span class="signature">Ukridge</span>.”</p>
-				<p>“Boko locally regarded as walkover. Made four speeches yesterday. Election song a breeze. Come on down.⁠—<span class="signature">Ukridge</span>.”</p>
-				<p>“Victory in sight. Spoke practically all yesterday. Election song a riot. Children croon it in cots. Come on down.⁠—<span class="signature">Ukridge</span>.”</p>
+				<p>“Going strong. Made three speeches yesterday. Election song a sensation. Come on down.⁠—<span epub:type="z3998:signature">Ukridge</span>.”</p>
+				<p>“Boko locally regarded as walkover. Made four speeches yesterday. Election song a breeze. Come on down.⁠—<span epub:type="z3998:signature">Ukridge</span>.”</p>
+				<p>“Victory in sight. Spoke practically all yesterday. Election song a riot. Children croon it in cots. Come on down.⁠—<span epub:type="z3998:signature">Ukridge</span>.”</p>
 			</blockquote>
 			<p>I leave it to any young author to say whether a man with one solitary political lyric to his credit could have resisted this. With the exception of a single music-hall song (“<span epub:type="se:name.music.song">Mother, She’s Pinching My Leg</span>,” tried out by Tim Sims, the Koy Komic, at the Peebles Hippodrome, and discarded, in response to a popular appeal, after one performance), no written words of mine had ever passed human lips. Naturally, it gave me a certain thrill to imagine the enlightened electorate of Redbridge⁠—at any rate, the right-thinking portion of it⁠—bellowing in its thousands those noble lines:⁠—</p>
 			<blockquote epub:type="z3998:poem">
