--- a/src/epub/text/the-return-of-battling-billson.xhtml
+++ b/src/epub/text/the-return-of-battling-billson.xhtml
@@ -78,7 +78,7 @@
 				<p>“This is a life and death matter, old man, and I’m relying on you. I can’t possibly tell you how important it is that this old bird should be suitably entertained. The gravest issues hang on it. So shove on your hat and go to it, laddie, and blessings will reward you. Tell you all the details when we meet.</p>
 				<footer>
 					<p epub:type="z3998:valediction">“Yours ever,</p>
-					<p class="signature" epub:type="z3998:sender">“<abbr class="name">S. F.</abbr> Ukridge.</p>
+					<p epub:type="z3998:signature z3998:sender">“<abbr class="name">S. F.</abbr> Ukridge.</p>
 					<p epub:type="z3998:postscript">“<abbr class="initialism">P.S.</abbr>⁠—I will defray all expenses later.”</p>
 				</footer>
 			</blockquote>
