[Editorial] welsh rabbit -> Welsh rabbit

--- a/src/epub/text/ukridges-dog-college.xhtml
+++ b/src/epub/text/ukridges-dog-college.xhtml
@@ -106,7 +106,7 @@
 			<p>“Rob a bank.”</p>
 			<p>George Tupper’s face cleared.</p>
 			<p>“I have it!” he said. “I will go straight over to Wimbledon tonight and approach his aunt.”</p>
-			<p>“Aren’t you forgetting that Ukridge is about as popular with her as a cold welsh rabbit?”</p>
+			<p>“Aren’t you forgetting that Ukridge is about as popular with her as a cold Welsh rabbit?”</p>
 			<p>“There may be a temporary estrangement, but if I tell her the facts and impress upon her that Ukridge is really making a genuine effort to earn a living⁠—”</p>
 			<p>“Well, try it if you like. But she will probably set the parrot on to you.”</p>
 			<p>“It will have to be done diplomatically, of course. It might be as well if you did not tell Ukridge what I propose to do. I do not wish to arouse hopes which may not be fulfilled.”</p>
