Fix dedication CSS

--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,7 +7,9 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="dedication" epub:type="dedication">
-			<p>Dedicated with esteem and gratitude to <strong>Old Bill Townend</strong> my friend from boyhood’s days who first introduced me to Stanley Featherstonehaugh Ukridge</p>
+			<p>Dedicated with esteem and gratitude to<br/>
+			<strong>Old Bill Townend</strong><br/>
+			my friend from boyhood’s days who first introduced me to Stanley Featherstonehaugh Ukridge</p>
 		</section>
 	</body>
 </html>
