Add word joiners before and after hair spaces that precede horizontal ellipses

--- a/src/epub/text/the-return-of-battling-billson.xhtml
+++ b/src/epub/text/the-return-of-battling-billson.xhtml
@@ -68,7 +68,7 @@
 			<p>I took it and opened the envelope with a sigh. I had recognised the handwriting of Ukridge, and for the hundredth time in our close acquaintanceship there smote me like a blow the sad suspicion that this man had once more gone and wished upon me some frightful thing.</p>
 			<blockquote epub:type="z3998:letter">
 				<p epub:type="z3998:salutation">“My dear old Horse⁠—</p>
-				<p>“It’s not often I ask you to do anything for me …</p>
+				<p>“It’s not often I ask you to do anything for me⁠ ⁠…</p>
 			</blockquote>
 			<p>I laughed hollowly.</p>
 			<blockquote epub:type="z3998:letter">
