--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Ukridge Stories</i><br/>
-			was published in 1924 by<br/>
+			was published between 1924 and 1925 by<br/>
 			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr class="name">P. G.</abbr> Wodehouse</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
