--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -49,6 +49,12 @@
 						<li>
 							<a href="text/ukridge-rounds-a-nasty-corner.xhtml">Ukridge Rounds a Nasty Corner</a>
 						</li>
+						<li>
+							<a href="text/a-bit-of-luck-for-mabel.xhtml">A Bit of Luck for Mabel</a>
+						</li>
+						<li>
+							<a href="text/buttercup-day.xhtml">Buttercup Day</a>
+						</li>
 					</ol>
 				</li>
 				<li>
