--- a/src/epub/text/buttercup-day.xhtml
+++ b/src/epub/text/buttercup-day.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<article id="buttercup-day" epub:type="se:short-story">
 			<h2 epub:type="title">Buttercup Day</h2>
-			<p>Laddie,” said Ukridge, “I need capital, old horse⁠—need it sorely.”</p>
+			<p>“Laddie,” said Ukridge, “I need capital, old horse⁠—need it sorely.”</p>
 			<p>He removed his glistening silk hat, looked at it in a puzzled way, and replaced it on his head. We had met by chance near the eastern end of Piccadilly, and the breathtaking gorgeousness of his costume told me that, since I had seen him last, there must have occurred between him and his aunt Julia one of those periodical reconciliations which were wont to punctuate his hectic and disreputable career. For those who know Stanley Featherstonehaugh Ukridge, that much-enduring man, are aware that he is the nephew of Miss Julia Ukridge, the wealthy and popular novelist, and that from time to time, when she can bring herself to forgive and let bygones be bygones, he goes to dwell for awhile in gilded servitude at her house in Wimbledon.</p>
 			<p>“Yes, Corky, my boy, I want a bit of capital.”</p>
 			<p>“Oh?”</p>
