[Editorial] hat-stand -> hatstand

--- a/src/epub/text/first-aid-for-dora.xhtml
+++ b/src/epub/text/first-aid-for-dora.xhtml
@@ -38,7 +38,7 @@
 			<p>“Your dress-clothes, sir.”</p>
 			<p>“My dress-clothes, eh?” I laughed genially. “Extraordinary fellow! You never know⁠—” A ghastly thought smote me like a blow. A cold wind seemed to blow through the hall. “He didn’t <em>get</em> them, did he?” I quavered.</p>
 			<p>“Why, yes, sir.”</p>
-			<p>“Got my dress-clothes?” I muttered thickly, clutching for support at the hat-stand.</p>
+			<p>“Got my dress-clothes?” I muttered thickly, clutching for support at the hatstand.</p>
 			<p>“He said it would be all right, sir,” said Bowles, with that sickening tolerance which he always exhibited for all that Ukridge said or did. One of the leading mysteries of my life was my landlord’s amazing attitude towards this hellhound. He fawned on the man. A splendid fellow like myself had to go about in a state of hushed reverence towards Bowles, while a human blot like Ukridge could bellow at him over the banisters without the slightest rebuke. It was one of those things which make one laugh cynically when people talk about the equality of man.</p>
 			<p>“He got my dress-clothes?” I mumbled.</p>
 			<p>“<abbr>Mr.</abbr> Ukridge said that he knew you would be glad to let him have them, as you would not be requiring them tonight.”</p>
