Rename halftitle.xhtml -> halftitlepage.xhtml

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/dedication.xhtml">Dedication</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">Ukridge Stories</a>
+					<a href="text/halftitlepage.xhtml">Ukridge Stories</a>
 					<ol>
 						<li>
 							<a href="text/ukridges-dog-college.xhtml">Ukridge’s Dog College</a>
@@ -78,7 +78,7 @@
 					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/ukridges-dog-college.xhtml" epub:type="bodymatter z3998:fiction">Ukridge Stories</a>
