--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">Ukridge Stories</i><br/>
 			was published between 1924 and 1925 by<br/>
 			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr class="name">P. G.</abbr> Wodehouse</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://astart.ca"><abbr class="name">B.</abbr> Timothy Keith</a>,<br/>
 			and is based on a transcription produced in 2020 by<br/>
