--- a/src/epub/text/the-exit-of-battling-billson.xhtml
+++ b/src/epub/text/the-exit-of-battling-billson.xhtml
@@ -104,7 +104,7 @@
 			<p>“As a matter of fact, laddie, I’ve decided to go on myself.”</p>
 			<p>“What! You!”</p>
 			<p>“Only way out, my boy. No other solution.”</p>
-			<p>I stared at the man. Years of the closest acquaintance with <abbr class="name">S. F.</abbr> Ukridge had rendered me almost surprise-proof at anything he might do, but this was too much.</p>
+			<p>I stared at the man. Years of the closest acquaintance with <abbr epub:type="z3998:given-name">S. F.</abbr> Ukridge had rendered me almost surprise-proof at anything he might do, but this was too much.</p>
 			<p>“Do you mean to tell me that you seriously intend to go out there tonight and appear in the ring?” I cried.</p>
 			<p>“Perfectly straightforward businesslike proposition, old man,” said Ukridge, stoutly. “I’m in excellent shape. I sparred with Billson every day while he was training.”</p>
 			<p>“Yes, but⁠—”</p>
