--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,13 +13,13 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">Ukridge Stories</i><br/>
 			was published between 1924 and 1925 by<br/>
-			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr class="name">P. G.</abbr> Wodehouse</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr epub:type="z3998:given-name">P. G.</abbr> Wodehouse</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://astart.ca"><abbr class="name">B.</abbr> Timothy Keith</a>,<br/>
+			<a href="https://astart.ca"><abbr epub:type="z3998:given-name">B.</abbr> Timothy Keith</a>,<br/>
 			and is based on a transcription produced in 2020 by<br/>
-			<b class="name">An Anonymous Volunteer</b><br/>
+			<b epub:type="z3998:personal-name">An Anonymous Volunteer</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/61507">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
