--- a/src/epub/text/the-return-of-battling-billson.xhtml
+++ b/src/epub/text/the-return-of-battling-billson.xhtml
@@ -79,7 +79,7 @@
 				<footer>
 					<p epub:type="z3998:valediction">“Yours ever,</p>
 					<p epub:type="z3998:signature z3998:sender">“<abbr epub:type="z3998:given-name">S. F.</abbr> Ukridge.</p>
-					<p epub:type="z3998:postscript">“<abbr class="initialism">P.S.</abbr>⁠—I will defray all expenses later.”</p>
+					<p epub:type="z3998:postscript">“<abbr epub:type="z3998:initialism">P.S.</abbr>⁠—I will defray all expenses later.”</p>
 				</footer>
 			</blockquote>
 			<p>Those last words did wring a faint, melancholy smile from me, but apart from them this hideous document seemed to me to be entirely free from comic relief. I looked at my watch and found that it was barely two-thirty. This female, therefore, was on my hands for a solid four hours and a quarter. I breathed maledictions⁠—futile, of course, for it was a peculiar characteristic of the demon Ukridge on these occasions that, unless one were strong-minded enough to disregard his frenzied pleadings altogether (a thing which was nearly always beyond me), he gave one no chance of escape. He sprang his foul schemes on one at the very last moment, leaving no opportunity for a graceful refusal.</p>
