Tweak semantics in colophon

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://astart.ca"><abbr epub:type="z3998:given-name">B.</abbr> Timothy Keith</a>,<br/>
 			and is based on a transcription produced in 2020 by<br/>
-			<b epub:type="z3998:personal-name">An Anonymous Volunteer</b><br/>
+			<b>An Anonymous Volunteer</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/61507">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
